# C-

./: .gitignore
Advanced programming/Lesson 1/Task1/: Task1.sln  Task1.vcxproj  main.cpp
Advanced programming/Lesson 2/Task1/: Task1.sln  Task1.vcxproj  main.cpp
Basic programming in C++/Lesson 4/: Lesson 4.sln  Lesson 4.vcxproj  main.cpp
Diplom/: .gitignore  CMakeLists.txt  CMakeSettings.json  config.ini
Diplom/data_base/: CMakeLists.txt  data_base.cpp  data_base.h
Diplom/http_server/: CMakeLists.txt  http_connection.cpp  http_connection.h  main.cpp
Diplom/ini_parser/: CMakeLists.txt  Ini_parser_exeption.cpp  Ini_parser_exeption.h  ini_parser.cpp  ini_parser.h
Diplom/spider/: CMakeLists.txt  http_utils.cpp  main.cpp
Lesson 2/Task3/: Task3.sln
Lesson 3/Task1/: Task1.vcxproj
Lesson 3/Task2/: main.cpp
Lesson 4/: main.cpp  out.txt
Lesson 4/Lesson 4_2/: out.txt
Lesson 5/Task 1/: main.cpp
Lesson 5/Task 2/: main.cpp
Lesson 5/Task 3/: Task 3.sln  Task 3.vcxproj  main.cpp
Lesson 6/Task 1/: Task 1.sln  function.h  main.cpp
Lesson 6/Task 2/: Task 2.sln  main.cpp
Lesson 6/Task 3/: Figure.h  Quadrangle.h  Task 3.vcxproj  Task 3.vcxproj.filters  Triangle.cpp  equil_triangle.cpp  equil_triangle.h  isosceles_triangle.cpp  isosceles_triangle.h  main.cpp  paralle.cpp  ra_triangle.cpp  ra_triangle.h  rectangle.cpp  rhomb.cpp  square.cpp
Lesson 7/Task 1/: Task 1.vcxproj  main.cpp  numcin.h  numresult.h
Lesson 7/Task 2/: Task 2.vcxproj  main.cpp
Lesson 8/Project1/: Project1.vcxproj
Lesson 8/Task 2/: Homework 03.sln
Multithreaded and asynchronous programming/Lesson5-Upacovka/: dockerfile
Multithreaded and asynchronous programming/Lesson5-Upacovka2/: dockerfile
Qt/Lesson 2/Lesson2/: CMakeLists.txt  main.cpp
Qt/Lesson 6 QConccurent/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
SQL/task5/: task5.sln  task5.vcxproj
SQL/task6/: main.cpp  task6.sln  task6.vcxproj
UE5/Lesson 1 Blueprints P1/: CppBaseActor.cpp  CppBaseActor.h
(+726 files in other folders)
